Fixed margin-top spacing between footer and footnote

--- a/theme/swanlotus/static/sass/swanlotus.sass
+++ b/theme/swanlotus/static/sass/swanlotus.sass
@@ -195,9 +195,6 @@ a:hover code
 .content ul.tags, .content .category
     margin-left: 0em
 
-.content ul.tags
-    margin-bottom: 1em
-
 .content .category
     margin-bottom: 0.5em
     margin-top: 2em
@@ -302,6 +299,7 @@ h1#feedback
 
 /* Styles for footer */
 .footer
+    margin-top: 1em
     background-color: $warning-light
     color: $black
     font-family: $family-secondary
